# hokusai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_JP.md  pyproject.toml
configs/: example-github-issue.yaml  example-gitlab.yaml  example-profile-company.yaml  example-profiles.yaml  profile-config-template.yaml  profile-template.yaml
docs/: HOKUSAI_PolicyGovernanceFramework_要件定義書.md  claude-figma-miro-integration-implementation-plan.md  claude-figma-miro-integration-requirements.md  claude-hokusai-notion-gitlab-roles.md  claude-langchain-interrupt-2026-feature-evaluation.md  claude-notion-main-dashboard-design.md  claude-slack-notification-plan.md  codex-figma-miro-integration-implementation-plan.md  codex-figma-miro-integration-requirements.md  codex-hokusai-notion-gitlab-operation-policy.md  codex-langchain-interrupt-2026-hokusai-feature-report.md  codex-notion-main-dashboard-operation-console-design.md  codex-slack-notification-implementation-plan.md  dashboard-connection-settings-proposal.md  figma-miro-integration-operation-guide.md  figma-miro-writeback-operation-guide.md  gemini-figma-miro-integration-plan.md  gemini-figma-miro-integration-requirements.md  gemini_hokusai_notion_dashboard_redesign.md  gemini_hokusai_toolchain_guide.md  hermesagentから推察するHOKUSAIに入れるべき機能.md  hokusai-figma-miro-integration-implementation-plan.md  hokusai-figma-miro-writeback-implementation-plan.md  hokusai-human-governance-workgraph-requirements.md  hokusai-issue-17-notion-setup-profile-aware-implementation-plan.md  hokusai-issue-19-notion-dashboard-panel-identification-implementation-plan.md  hokusai-issue-21-operator-property-implementation-plan.md  hokusai-issue-22-profile-template-implementation-plan.md  hokusai-issue-23-24-handover-implementation-plan.md  hokusai-issue-25-notion-setup-scaffold-implementation-plan.md  hokusai-issue-27-scaffold-title-icon-dedupe-implementation-plan.md  hokusai-issue-29-drop-hokusai-prefix-implementation-plan.md  hokusai-issue-31-gemini-cli-cross-review-implementation-plan.md  (+7 more)
(+184 files in other folders)
